<resources>
    <string name="accuse">Accuse</string>
    <string name="accuseCompleted">Accuse completed</string>
    <string name="accuseReplyCompleted">Accuse reply completed</string>
    <string name="activeLocation">Active location</string>
    <string name="addedProfile">Added profile</string>
    <string name="addedToFriendList">Added to friend list</string>
    <string name="addMe">Add me?</string>
    <string name="agreeWithClause">Agree with clause</string>
    <string name="all">All</string>
    <string name="alreadyMember">Already member</string>
    <string name="alreadyMemberOrWaiting">Already member or waiting</string>
    <string name="approval">Approval</string>
    <string name="banish">Banish</string>
    <string name="baseProfile">Base profile</string>
    <string name="birth">Birth</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="cantUploadMorePhoto">cantUploadMorePhoto</string>
    <string name="checkNetworkStatus">Please check network status</string>
    <string name="clause">Claus text</string>
    <string name="close">Close</string>
    <string name="closeGethering">Close gethering</string>
    <string name="company">Company(School)</string>
    <string name="complete">Complete</string>
    <string name="completeApplyForAdmission">Apply for admission complete</string>
    <string name="completeEdit">Edit complete</string>
    <string name="completeOpenGethering">Open Gethering complete</string>
    <string name="completeSignUp">Sign up complete</string>
    <string name="completeWithdraw">Withdraw complete</string>
    <string name="confirm">Confirm</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="cooperate">Cooperate</string>
    <string name="copyReplyCompleted">Copy reply completed</string>
    <string name="delete">Delete</string>
    <string name="deleteCompleted">Delete completed</string>
    <string name="deletedFromFriendList">Deleted from friend list</string>
    <string name="deleteMessage">Delete message</string>
    <string name="disagreeWithClause">Disagree with clause</string>
    <string name="dontSeeAgainToday">Do not again today</string>
    <string name="duplicatedId">Duplicated ID</string>
    <string name="duplicatedNickname">Duplicated nickname</string>
    <string name="edit">Edit</string>
    <string name="editPost">Edit post</string>
    <string name="emailAddress">E-mail address</string>
    <string name="failToAccuse">Fail to accuse this post</string>
    <string name="failToAccuseReply">Fail to accuse this reply</string>
    <string name="failToApproval">Fail to approval</string>
    <string name="failToBanish">Fail to banish</string>
    <string name="failToCloseGethering">Fail to close gethering</string>
    <string name="failToCopyReply">Fail to copy this reply</string>
    <string name="failToDeleteMessage">Fail to delete message</string>
    <string name="failToDeletePost">Fail to delete this post</string>
    <string name="failToDeleteReply">Fail to delete this reply</string>
    <string name="failToDownloadImage">Fail to download image</string>
    <string name="failToEdit">Fail to edit</string>
    <string name="failToJoinGethering">Fail to join the gethering</string>
    <string name="failToLaunchToNApp">Fail to launch to N-App</string>
    <string name="failToLoadBitmap">Fail to load bitmap</string>
    <string name="failToLoadBitmap_OutOfMemory">Fail to load bitmap, because of OutOfMemory</string>
    <string name="failToLoadCategory">Fail to load category</string>
    <string name="failToLoadGetheringInfo">Fail to load gethering info</string>
    <string name="failToLoadUserInfo">Fail to load user info</string>
    <string name="failToLoadList">Fail to load list</string>
    <string name="failToLoadMessageList">Fail to load message list</string>
    <string name="failToLoadPhoto">Fail to load photo</string>
    <string name="failToLoadPost">Fail to load this post</string>
    <string name="failToLoadReplies">Fail to load replies</string>
    <string name="failToLoadUserStatus">Fail to load user status</string>
    <string name="failToLoadWebBrowser">Fail to load browser</string>
    <string name="failToOpenGethering">Fail to open gethering</string>
    <string name="failToSaveImage">Fail to save image</string>
    <string name="failToScrapPost">Fail to scrap this post</string>
    <string name="failToSendMessage">Fail to send message</string>
    <string name="failToSendPost">Fail to send post</string>
    <string name="failToSendReply">Fail to send reply</string>
    <string name="failToShowVideo">Fail to open this video</string>
    <string name="failToSignIn">FailToSignIn</string>
    <string name="failToSignOut">FailToSignOut</string>
    <string name="failToSignUp">FailToSignUp</string>
    <string name="failToSubmitAddedProfile">Fail to submit added profile</string>
    <string name="failToSubmitBaseProfile">Fail to submit base profile</string>
    <string name="failToSubmitCooperate">Fail to submit cooperate</string>
    <string name="failToSubmitPassword">Fail to submit password</string>
    <string name="failToSubmitPushSetting">Fail to submit push setting</string>
    <string name="failToWithdrawGethering">Fail to withdraw the gethering</string>
    <string name="female">Femail</string>
    <string name="femaleInit">F</string>
    <string name="findIdAndPw">Find Id/Pw</string>
    <string name="friend">Friend</string>
    <string name="friend_be">Be a friend</string>
    <string name="friend_find">Find friends</string>
    <string name="friend_list">Friends list</string>
    <string name="friend_management">Manage Friends</string>
    <string name="friend_newPost">New post by friends</string>
    <string name="friend_search">Search friends</string>
    <string name="fullListOfPost">Full list of post</string>
    <string name="gender">Gender</string>
    <string name="go">Go</string>
    <string name="gethering">Gethering</string>
    <string name="getheringlist_all">All\ngetherings</string>
    <string name="getheringlist_active">Active\ngetherings</string>
    <string name="getheringlist_standBy">Standing by\ngetherings</string>
    <string name="getheringlist_open">Open\ngethering</string>
    <string name="getheringId">Gethering ID</string>
    <string name="getheringMenu_intro">Gethering\nIntroduction</string>
    <string name="getheringMenu_newPost">Gethering\nnew post</string>
    <string name="getheringMenu_member">Show\nmember</string>
    <string name="getheringMenu_standBy">Standing by\nmember</string>
    <string name="getheringName">Gethering name</string>
    <string name="hintForConfirmNewPw">Confirm new password</string>
    <string name="hintForCurrentPw">Current password</string>
    <string name="hintForId">Id (4 ~ 20)</string>
    <string name="hintForPw">Password (4 ~ 20)</string>
    <string name="hintForPhoneNumber">PhoneNumber, used to find Id and Pw</string>
    <string name="hintForConfirmPw">Confirm password</string>
    <string name="hintForCooperate1">Title</string>
    <string name="hintForCooperate2">Name</string>
    <string name="hintForCooperate3">Phone number</string>
    <string name="hintForCooperate4">Email</string>
    <string name="hintForCooperate5">Content</string>
    <string name="hintForEmail">Email</string>
    <string name="hintForGethering_name">Gethering name(2~20)</string>
    <string name="hintForGethering_id">Gethering ID(2~15)</string>
    <string name="hintForGethering_introduction">Gethering introduction(0~100)</string>
    <string name="hintForNewEmail">NewEmail</string>
    <string name="hintForNewPw">New password</string>
    <string name="hintForNickname">Nickname(2 ~ 14)</string>
    <string name="hintForIntroduce">Please introduce yourself</string>
    <string name="hintForPosting">Hint for post</string>
    <string name="hintForReply">Hint for reply</string>
    <string name="id">Id</string>
    <string name="image">Image</string>
    <string name="inputAll">Input all</string>
    <string name="inputDirectly">Input directly</string>
    <string name="inputMoreInfo">Input more information</string>
    <string name="inputComplete">Input complete</string>
    <string name="inputContent">Input contents</string>
    <string name="interested">Interested</string>
    <string name="introduce">Introduce</string>
    <string name="introduceNId">Introduce N id</string>
    <string name="invalidConfirmPw">Invalid ConfirmPw</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidGetheringId">Invalid gethering ID</string>
    <string name="invalidGetheringIntro">Invalid gethering introduction</string>
    <string name="invalidGetheringNickname">Invalid gethering nickname</string>
    <string name="invalidGetheringPublic">Select public or private</string>
    <string name="invalidId">Invalid Id</string>
    <string name="invalidNickname">Invalid Nickname</string>
    <string name="invalidPhoneNumber">Invalid PhoneNumber</string>
    <string name="invalidPw">Invalid Pw</string>
    <string name="invalidUri">Invalid uri</string>
    <string name="job">Job</string>
    <string name="join">Join</string>
    <string name="joinGethering">Join gethering</string>
    <string name="kakaoTalkId">Kakao talk ID</string>
	<string name="keepGoing">Continue</string>
    <string name="lastPage">Last page</string>
    <string name="leaveMember">Leave member</string>
    <string name="liveLocation">live location</string>
    <string name="loadingNewList">Loading new list..</string>
    <string name="loadingReplies">Loading replies..</string>
    <string name="mail1">naver.com</string>
    <string name="mail2">daum.net</string>
    <string name="mail3">hotmail.com</string>
    <string name="mail4">nate.com</string>
    <string name="mail5">gmail.com</string>
    <string name="mail6">yahoo.com</string>
    <string name="male">Male</string>
    <string name="maleInit">M</string>
    <string name="memberCount">Members</string>
    <string name="menu1">Profile</string>
    <string name="menu2">Story</string>
    <string name="menu3">Scrap</string>
    <string name="menu4">Message</string>
   	<string name="message">Message</string>
   	<string name="messageForCloseGethering">Message for close gethering</string>
   	<string name="modifyUserInfo">Modify user info</string>
   	<string name="moveToPartnerApp">Move to partner app</string>
    <string name="mustInput">You must input this</string>
    <string name="myPost">My post</string>
    <string name="needPublic">Need public</string>
    <string name="newPostByRegion">New post by region</string>
    <string name="newPostByTheme">New post by theme</string>
    <string name="nickname">Nickname</string>
    <string name="noContent">No content</string>
    <string name="noMoreReplies">No more replies</string>
    <string name="noname">Noname</string>
    <string name="noPosting">No posting</string>
    <string name="notEnoughMemory">Not enough Memory</string>
    <string name="notice">Notice</string>
    <string name="notificationAll">Notification all</string>
    <string name="notificationMessage">Notification message</string>
    <string name="notificationReply">Notification reply</string>
    <string name="open">Open</string>
    <string name="openGethering">Open gethering</string>
    <string name="owner">Owner</string>
    <string name="password">Password</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="photo_album">Album</string>
    <string name="photo_take">Take a Photo</string>
    <string name="plusApp">Plus app</string>
    <string name="post">Post</string>
    <string name="postingCompleted">Posting completed</string>
    <string name="postingToSNSWillBeUpdatedLater">posting to SNS will be updated later</string>
    <string name="preparingPlusApp">Preparing plus app</string>
    <string name="regdate">Regdate</string>
</resources>